--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
 	</head>
 	<body>
 		<!-- start your experiment -->
-		
+		<!-- https://www.youtube.com/watch?v=E6kLaaQFctU&t=157s&ab_channel=VadimMakeev -->
 			<label class="check option">
 				<input class="check__input" type="checkbox" />
+				<span class="check__box"></span>
 				Первый
 			</label>
 			<label class="check option">
 				<input class="check__input" type="checkbox" checked />
-				Первый
+				<span class="check__box"></span>
+				Второй
 			</label>
 			<label class="check option">
 				<input class="check__input" type="checkbox" disabled />
-				Первый
+				<span class="check__box"></span>
+				Третий
 			</label>
 			<label class="check option">
 				<input class="check__input" type="checkbox" checked disabled />
-				Первый
+				<span class="check__box"></span>
+				Четвертый
 			</label>
 		
 		<!-- end your experiment -->
